force-app/main/default/objects/Litmos__ModuleNew__c/Litmos__ModuleNew__c.object-meta.xml
<CustomObject>
    <label>Module</label>
    <nameField>
        <label>Module New Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Modules New</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>