force-app/main/default/objects/Litmos__ModuleNew__c/fields/Litmos__Description__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>