force-app/main/default/objects/Litmos__ModuleNew__c/fields/Litmos__ModuleTypeDesc__c.field-meta.xml
<CustomField>
    <fullName>Litmos__ModuleTypeDesc__c</fullName>
    <description>Text description for Module type ID</description>
    <label>ModuleTypeDesc</label>
    <length>100</length>
    <type>Text</type>
</CustomField>