force-app/main/default/objects/Litmos__ModuleNew__c/fields/Litmos__Passmark__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Passmark__c</fullName>
    <label>Passmark</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>