force-app/main/default/objects/Litmos__ModuleNew__c/fields/Litmos__Type__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Type__c</fullName>
    <label>Type</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>